--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Glauco M. Sousa – Geophysicist</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -11,6 +12,7 @@ body {
     margin: auto;
     padding: 20px;
     line-height: 1.6;
+    color: #222;
 }
 h1 { font-size: 2.2em; margin-bottom: 0; }
 h2 { margin-top: 40px; }
@@ -19,16 +21,26 @@ img.profile {
     border-radius: 6px;
     margin-top: 20px;
 }
+a {
+    color: #003366;
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
 </style>
 </head>
+
 <body>
 
 <h1>Glauco Macedo Sousa</h1>
 <p><strong>PhD Student, University of Wyoming</strong><br>
 Rock Physics • Seismic Inversion • Machine Learning in Geosciences</p>
 
-<img src="https://images.unsplash.com/photo-1535713875002-d1d0cf377fde?auto=format&fit=crop&w=400&q=80" 
-     alt="profile photo" class="profile">
+<!-- FOTO DO GLAUCO -->
+<img src="foto_glauco1.jpg" 
+     alt="Glauco Macedo Sousa" 
+     class="profile">
 
 <h2>About Me</h2>
 <p>
@@ -48,15 +60,21 @@ machine-learning techniques for reservoir characterization.
 </ul>
 
 <h2>Advisor</h2>
-<p><a href="https://www.uwyo.edu/geolgeophys/people/grana.html">Prof. Dario Grana</a></p>
+<p>
+<a href="https://www.uwyo.edu/geolgeophys/people/grana.html">
+Prof. Dario Grana
+</a>
+</p>
 
 <h2>Curriculum Vitae</h2>
-<p><a href="CV_Glauco_Macedo.pdf">Download CV (PDF)</a></p>
+<p>
+<a href="CV_Glauco_Macedo.pdf">Download CV (PDF)</a>
+</p>
 
 <h2>Contact</h2>
 <ul>
 <li>Email: glmacedo@uwyo.edu</li>
-<li>Office: Department of Geology & Geophysics, UW</li>
+<li>Office: Department of Geology & Geophysics, University of Wyoming</li>
 <li><a href="https://www.uwyo.edu/geolgeophys/">UW Department Homepage</a></li>
 <li><a href="https://www.researchgate.net/">ResearchGate</a></li>
 <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
@@ -64,8 +82,10 @@ machine-learning techniques for reservoir characterization.
 
 <h2>Images</h2>
 <p>Research images:</p>
+
 <img src="https://images.unsplash.com/photo-1500048993959-dcfe1c54f85a?auto=format&fit=crop&w=600&q=80" width="400">
 <img src="https://images.unsplash.com/photo-1580674283341-ea2f7e9a4f7a?auto=format&fit=crop&w=600&q=80" width="400">
 
 </body>
 </html>
+
