--- a/index.html
+++ b/index.html
@@ -46,37 +46,33 @@ Rock Physics • Seismic Inversion • Machine Learning in Geosciences</p>
 <p>
 I am a geophysicist with experience in seismic interpretation, quantitative 
 analysis, and rock physics. I am currently pursuing a PhD at the University 
-of Wyoming, focusing on seismic inversion, elastic parameterization, and 
-machine-learning techniques for reservoir characterization.
+of Wyoming, focusing on seismic inversion and 
+rock-physics for reservoir characterization.
 </p>
 
 <h2>Research Interests</h2>
 <ul>
-<li>Rock-physics-driven seismic inversion</li>
-<li>Elastic parameterization</li>
-<li>AVO analysis and fluid discrimination</li>
-<li>PINNs applied to geosciences</li>
-<li>Turbidite reservoir characterization</li>
+<li>Rock-physics</li>
+<li>Reservoir Modeling</li>
 </ul>
 
 <h2>Advisor</h2>
 <p>
-<a href="https://www.uwyo.edu/geolgeophys/people/grana.html">
+<a href="https://www.uwyo.edu/geolgeophys/people/faculty/dario-grana.html">
 Prof. Dario Grana
 </a>
 </p>
 
 <h2>Curriculum Vitae</h2>
 <p>
-<a href="CV_Glauco_Macedo.pdf">Download CV (PDF)</a>
+<a href="Resume_Glauco_Macedo_Sousa.pdf">Download CV (PDF)</a>
 </p>
 
 <h2>Contact</h2>
 <ul>
-<li>Email: glmacedo@uwyo.edu</li>
+<li>Email: gsousa@uwyo.edu</li>
 <li>Office: Department of Geology & Geophysics, University of Wyoming</li>
 <li><a href="https://www.uwyo.edu/geolgeophys/">UW Department Homepage</a></li>
-<li><a href="https://www.researchgate.net/">ResearchGate</a></li>
 <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
 </ul>
 
