--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ a:hover {
 
 <h1>Glauco Macedo Sousa</h1>
 <p><strong>PhD Student, University of Wyoming</strong><br>
-Rock Physics • Seismic Inversion • Machine Learning in Geosciences</p>
+Rock Physics • Seismic Inversion</p>
 
 <!-- FOTO DO GLAUCO -->
 <img src="foto_glauco1.jpg" 
@@ -73,7 +73,7 @@ Prof. Dario Grana
 <li>Email: gsousa@uwyo.edu</li>
 <li>Office: Department of Geology & Geophysics, University of Wyoming</li>
 <li><a href="https://www.uwyo.edu/geolgeophys/">UW Department Homepage</a></li>
-<li><a href="https://www.linkedin.com/">LinkedIn</a></li>
+<li><a href="https://www.linkedin.com/in/glauco-macedo-455b38138/">LinkedIn</a></li>
 </ul>
 
 <h2>Images</h2>
