--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@ Rock Physics • Seismic Inversion</p>
 
 <h2>About Me</h2>
 <p>
-I am a geophysicist with experience in seismic interpretation, quantitative 
-analysis, and rock physics. I am currently pursuing a PhD at the University 
+I am a geophysicist with experience in seismic interpretation and quantitative 
+analysis. I am currently pursuing a PhD at the University 
 of Wyoming, focusing on seismic inversion and 
 rock-physics for reservoir characterization.
 </p>
@@ -72,7 +72,6 @@ Prof. Dario Grana
 <ul>
 <li>Email: gsousa@uwyo.edu</li>
 <li>Office: Department of Geology & Geophysics, University of Wyoming</li>
-<li><a href="https://www.uwyo.edu/geolgeophys/">UW Department Homepage</a></li>
 <li><a href="https://www.linkedin.com/in/glauco-macedo-455b38138/">LinkedIn</a></li>
 </ul>
 
