--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@ a {
 a:hover {
     text-decoration: underline;
 }
+.lead {
+    font-size: 1.15em;
+    text-align: justify;
+}
 </style>
 </head>
 
@@ -35,46 +39,83 @@ a:hover {
 
 <h1>Glauco Macedo Sousa</h1>
 <p><strong>PhD Student, University of Wyoming</strong><br>
-Rock Physics • Seismic Inversion</p>
+Rock Physics • Seismic Inversion • Quantitative Interpretation</p>
 
 <!-- FOTO DO GLAUCO -->
 <img src="foto_glauco1.jpg" 
      alt="Glauco Macedo Sousa" 
      class="profile">
 
+
+<!-- =================== ABOUT ME (adaptado ao template) =================== -->
 <h2>About Me</h2>
-<p>
-I am a geophysicist with experience in seismic interpretation and quantitative 
-analysis. I am currently pursuing a PhD at the University 
-of Wyoming, focusing on seismic inversion and 
-rock-physics for reservoir characterization.
+
+<p class="lead">
+I am a geophysicist with a strong interest in quantitative seismic interpretation, 
+rock physics, and reservoir characterization in turbidite systems. 
+I hold a Bachelor’s degree in Geology from the State University of Rio de Janeiro (UERJ) 
+and a Master’s degree in Applied Geophysics from the Federal University of Bahia (UFBA). 
+Since 2006, I have worked as a geophysicist at Petrobras, where my career has largely 
+focused on seismic interpretation in the major sedimentary basins along Brazil’s 
+southeastern coast.
+<br><br>
+
+Recently, I transitioned to the Quantitative Interpretation sector, where I have been 
+exploring advanced techniques for seismic analysis, seismic inversion, and rock-physics–based 
+attribute evaluation. This experience strengthened my interest in developing 
+robust elastic parameterizations capable of improving facies and pore-fluid discrimination.
+<br><br>
+
+In Fall 2025, I began my PhD in Geophysics at the 
+<a href="https://www.uwyo.edu/geolgeophys/" target="_blank">University of Wyoming</a>, 
+where my research focuses on optimal elastic parameterizations for facies and pore-fluid 
+discrimination in turbidite reservoirs from the Campos Basin (Brazil). My work integrates 
+well-log analysis, seismic inversion, and machine-learning approaches, particularly 
+Physics-Informed Neural Networks (PINNs), to enhance quantitative seismic workflows.
 </p>
 
+
+<!-- =================== RESEARCH INTERESTS =================== -->
 <h2>Research Interests</h2>
 <ul>
-<li>Rock-physics</li>
-<li>Reservoir Modeling</li>
+<li>Rock physics and elastic parameterizations</li>
+<li>Seismic inversion (deterministic and stochastic)</li>
+<li>AVO/AVO-inversion</li>
+<li>Quantitative Interpretation (QI)</li>
+<li>Physics-Informed Neural Networks (PINNs)</li>
+<li>Reservoir characterization in turbidite systems</li>
 </ul>
 
+
+<!-- =================== ADVISOR =================== -->
 <h2>Advisor</h2>
 <p>
-<a href="https://www.uwyo.edu/geolgeophys/people/faculty/dario-grana.html">
+<a href="https://www.uwyo.edu/geolgeophys/people/faculty/grana.html" target="_blank">
 Prof. Dario Grana
 </a>
 </p>
 
+
+<!-- =================== CV =================== -->
 <h2>Curriculum Vitae</h2>
 <p>
-<a href="Resume_Glauco_Macedo_Sousa.pdf">Download CV (PDF)</a>
+<a href="Resume_Glauco_Macedo_Sousa.pdf" target="_blank">Download CV (PDF)</a>
 </p>
 
+
+<!-- =================== CONTACT =================== -->
 <h2>Contact</h2>
 <ul>
 <li>Email: gsousa@uwyo.edu</li>
 <li>Office: Department of Geology & Geophysics, University of Wyoming</li>
-<li><a href="https://www.linkedin.com/in/glauco-macedo-455b38138/">LinkedIn</a></li>
+<li>
+<a href="https://www.linkedin.com/in/glauco-macedo-455b38138/" target="_blank">
+LinkedIn
+</a>
+</li>
 </ul>
 
 </body>
 </html>
+
 
