--- a/index.html
+++ b/index.html
@@ -52,26 +52,20 @@ Rock Physics • Seismic Inversion • Quantitative Interpretation</p>
 
 <p class="lead">
 I am a geophysicist with a strong interest in quantitative seismic interpretation, 
-rock physics, and reservoir characterization in turbidite systems. 
+rock physics and reservoir characterization. 
 I hold a Bachelor’s degree in Geology from the State University of Rio de Janeiro (UERJ) 
 and a Master’s degree in Applied Geophysics from the Federal University of Bahia (UFBA). 
 Since 2006, I have worked as a geophysicist at Petrobras, where my career has largely 
 focused on seismic interpretation in the major sedimentary basins along Brazil’s 
-southeastern coast.
-<br><br>
-
-Recently, I transitioned to the Quantitative Interpretation sector, where I have been 
-exploring advanced techniques for seismic analysis, seismic inversion, and rock-physics–based 
-attribute evaluation. This experience strengthened my interest in developing 
-robust elastic parameterizations capable of improving facies and pore-fluid discrimination.
+southeastern coast. Recently, I transitioned to the Quantitative Interpretation sector, where I have been 
+exploring advanced techniques for seismic analysis.
 <br><br>
 
 In Fall 2025, I began my PhD in Geophysics at the 
 <a href="https://www.uwyo.edu/geolgeophys/" target="_blank">University of Wyoming</a>, 
 where my research focuses on optimal elastic parameterizations for facies and pore-fluid 
-discrimination in turbidite reservoirs from the Campos Basin (Brazil). My work integrates 
-well-log analysis, seismic inversion, and machine-learning approaches, particularly 
-Physics-Informed Neural Networks (PINNs), to enhance quantitative seismic workflows.
+discrimination. My work integrates 
+well-log analysis, seismic inversion, and machine-learning approaches to enhance quantitative seismic workflows.
 </p>
 
 
