--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@ well-log analysis, seismic inversion, and machine-learning approaches to enhance
 <!-- =================== RESEARCH INTERESTS =================== -->
 <h2>Research Interests</h2>
 <ul>
-<li>Rock physics and elastic parameterizations</li>
-<li>Seismic inversion (deterministic and stochastic)</li>
-<li>AVO/AVO-inversion</li>
-<li>Quantitative Interpretation (QI)</li>
-<li>Physics-Informed Neural Networks (PINNs)</li>
-<li>Reservoir characterization in turbidite systems</li>
+<li>Rock physics</li>
+<li>Seismic inversion</li>
+<li>AVO analysis</li>
+<li>Quantitative Interpretation</li>
+<li>Physics-Informed Neural Networks</li>
 </ul>
 
 
